--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.5",
     "dotenv": "^10.0.0",
+    "moment": "^2.29.1",
     "react": "^16.14.0",
+    "react-datetime": "^3.1.1",
     "react-dom": "^16.14.0",
     "react-is": "^16.13.1",
     "react-scripts": "4.0.1",
