--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage": "http://AndreySurzhan.github.io/frontend-engineer-challenge",
+  "homepage": "https://andreysurzhan.github.io/frontend-engineer-challenge/",
   "name": "koala-web-challenge",
   "version": "0.1.0",
   "private": true,
