--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
     "gh-pages": "^3.2.3"
   }
 }
