--- a/.github/workflows/github-actions-ghpages-push.yml
+++ b/.github/workflows/github-actions-ghpages-push.yml
@@ -15,6 +15,10 @@ jobs:
           npm install
           npm run build
 
+      - name: Test  
+        run: |
+          npm test
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.6
         with:
