--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,32 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+    "theme_color": "rgb(251, 248, 247)",
+    "background_color": "rgb(251, 248, 247)",
+    "display": "standalone",
+    "scope": "/",
+    "start_url": "/https://andreysurzhan.github.io/frontend-engineer-challenge/index.html",
+    "name": "Koala Web Engineer Coding Challenge",
+    "short_name": "Koala",
+    "description": "Koala Web Engineer Coding Challenge",
+    "icons": [
+        {
+            "src": "/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-256x256.png",
+            "sizes": "256x256",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
