--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,24 +2,22 @@
     "theme_color": "rgb(251, 248, 247)",
     "background_color": "rgb(251, 248, 247)",
     "display": "standalone",
-    "scope": "/",
-    "start_url": "/",
     "name": "Koala Web Engineer Coding Challenge",
     "short_name": "Koala",
     "description": "Koala Web Engineer Coding Challenge",
     "icons": [
         {
-            "src": "./icon-256x256.png",
+            "src": "icon-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "./icon-384x384.png",
+            "src": "icon-384x384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "./icon-512x512.png",
+            "src": "icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
